--- a/src/css/weekday.styl
+++ b/src/css/weekday.styl
@@ -10,17 +10,15 @@
         margin: 0 10px
 
     .{css-prefix}today
-        background: none
+        background: #fdf5ce
+        background: #fdf5ce !important
 
         .{css-prefix}weekday-grid-date-decorator
             display: inline-block
             wh(27px, 27px)
             line-height: 27px
             text-align: center
-            background: #135de6
             border-radius: 50%
-            color: #fff
-            font-weight: bold
             margin-left: 2px
 
 +prefix-classes(weekday)
@@ -60,7 +58,7 @@
         .grid-date-title
             line-height: 27px
             margin-right: 5px
-        
+
         .grid-more-schedules
             float: right
             display: inline-block
